force-app/main/default/objects/Site_Visit__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Site Visits</relationshipLabel>
    <relationshipName>Assigned_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>