force-app/main/default/objects/Site_Visit__c/fields/Executive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Executive_Notes__c</fullName>
    <label>Executive Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>