force-app/main/default/objects/Site_Visit__c/fields/GRE_Remarks__c.field-meta.xml
<CustomField>
    <fullName>GRE_Remarks__c</fullName>
    <label>GRE Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>