force-app/main/default/objects/Site_Visit__c/fields/Is_Cross_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Cross_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Site Visit is for a different project than the lead&apos;s original project.</description>
    <label>Is Cross Project</label>
    <type>Checkbox</type>
</CustomField>