force-app/main/default/objects/Site_Visit__c/fields/Mode_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Visit__c</fullName>
    <label>Mode Of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>On Site Visit</fullName>
                <isActive>false</isActive>
                <label>On Site Visit</label>
            </value>
            <value>
                <fullName>Virtual Site Visit</fullName>
                <isActive>false</isActive>
                <label>Virtual Site Visit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>