force-app/main/default/objects/Site_Visit__c/fields/Need_Pick_Up_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Need_Pick_Up_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Pick Up Assistance</label>
    <type>Checkbox</type>
</CustomField>