force-app/main/default/objects/Site_Visit__c/fields/Re_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Scheduled_Date__c</fullName>
    <label>Re-Scheduled Date</label>
    <type>DateTime</type>
</CustomField>