force-app/main/default/objects/Site_Visit__c/fields/Rescheduled_From__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_From__c</fullName>
    <label>Rescheduled From</label>
    <type>DateTime</type>
</CustomField>