force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Completed_Time__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Completed_Time__c</fullName>
    <label>Site Visit Completed Time</label>
    <type>DateTime</type>
</CustomField>