force-app/main/default/objects/Site_Visit__c/validationRules/Cancelled_Reason_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Reason_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Cancelled&quot;),
    ISBLANK(Cancelled_Reason__c)
)</errorConditionFormula>
    <errorMessage>Cancelled Reason is required when Status is Cancelled</errorMessage>
</ValidationRule>