force-app/main/default/objects/Site_Visit__c/validationRules/Completed_date_and_Remarks_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_date_and_Remarks_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    OR(
        ISBLANK(Completed_Date__c),
        ISBLANK(FeedBack__c)
    )
)</errorConditionFormula>
    <errorMessage>Completed Date and Feedback are required when Status is Completed.</errorMessage>
</ValidationRule>