force-app/main/default/objects/Site_Visit__c/validationRules/completed_date_not_earlie_than_scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>completed_date_not_earlie_than_scheduled</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Completed_Date__c)),
    NOT(ISBLANK(Scheduled_Date__c)),
    Completed_Date__c &lt; Scheduled_Date__c
)</errorConditionFormula>
    <errorMessage>Completed Date cannot be earlier than Scheduled Date</errorMessage>
</ValidationRule>