force-app/main/default/objects/Site_Visit__c/validationRules/Rescheduled_From_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rescheduled_From_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Re-Schedule&quot;),
    ISBLANK(Rescheduled_From__c)
)</errorConditionFormula>
    <errorMessage>Rescheduled From is required when Status is Re-Schedule</errorMessage>
</ValidationRule>